fix moon display bug on mobile

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -208,11 +208,12 @@ textarea {
  -webkit-background-clip: padding-box;
  -moz-background-clip:    padding;
  background-clip:         padding-box;
+  z-index: 500;
+  position: relative;
+  width: 300px;
+  max-width: 90vw;
   margin: 25px 0px 0px 25px;
   border-radius: 100%;
-  width: 300px;
-  position: relative;
-  z-index: 500;
 }
 .planet:hover{
   border: 10px solid $offwhite;
@@ -349,12 +350,17 @@ textarea {
     // left: 50%;
     text-align: center;
   }
+  .planet{
+    margin: 35px 0 0 0;
+    max-width: 100%;
+  }
   .planet_caption{
     visibility: visible;
   }
 }
 @media (max-width: 1200px) {
-  .moon-orbit{
+  #moon-orbit{
     display: none;
+    visibility: hidden;
   }
 }
